force-app/main/default/objects/agrid__Related_Object__c/agrid__Related_Object__c.object-meta.xml
<CustomObject>
    <label>Related Object</label>
    <nameField>
        <displayFormat>ROF-{0000}</displayFormat>
        <label>Related Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>