force-app/main/default/objects/agrid__Related_Object__c/fields/agrid__Api_Name__c.field-meta.xml
<CustomField>
    <fullName>agrid__Api_Name__c</fullName>
    <label>Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>