force-app/main/default/objects/agrid__Related_Object__c/fields/agrid__Criteria__c.field-meta.xml
<CustomField>
    <fullName>agrid__Criteria__c</fullName>
    <label>Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>