force-app/main/default/objects/agrid__Related_Object__c/fields/agrid__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>agrid__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>